--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll-to-component": "^1.0.2",
+    "react-slick": "^0.27.13",
     "react-tabs": "^5.1.0",
     "react-toastify": "^9.0.7",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
