--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "react-query": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "react-scroll-to-component": "^1.0.2",
-    "react-tabs": "^5.1.0",
     "react-slick": "^0.29.0",
+    "react-tabs": "^5.1.0",
     "react-toastify": "^9.0.7",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
