--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-tabs": "^5.1.0",
     "react-toastify": "^9.0.7",
     "slick-carousel": "^1.8.1",
+    "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
