--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.34.0",
     "react-icons": "^4.4.0",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-query": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
