--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "daisyui": "^2.20.0",
     "firebase": "^9.9.1",
+    "leaflet": "^1.8.0",
     "nuka-carousel": "^4.8.4",
     "pure-react-carousel": "^1.29.0",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.34.0",
     "react-icons": "^4.4.0",
+    "react-leaflet": "^4.0.1",
     "react-messenger-customer-chat": "^0.8.0",
     "react-query": "^4.0.0",
     "react-router-dom": "^6.3.0",
