--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuka-carousel": "^4.8.4",
     "pure-react-carousel": "^1.29.0",
     "react": "^18.2.0",
+    "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.34.0",
@@ -33,6 +34,7 @@
     "react-slick": "^0.29.0",
     "react-tabs": "^5.1.0",
     "react-toastify": "^9.0.7",
+    "recharts": "^2.1.13",
     "slick-carousel": "^1.8.1",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
