--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.7",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.34.0",
     "react-icons": "^4.4.0",
