--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "aos": "^2.3.4",
     "axios": "^0.27.2",
     "daisyui": "^2.20.0",
+    "date-fns": "^2.29.1",
     "firebase": "^9.9.1",
     "leaflet": "^1.8.0",
     "nuka-carousel": "^4.8.4",
     "pure-react-carousel": "^1.29.0",
     "react": "^18.2.0",
     "react-countup": "^6.3.0",
+    "react-day-picker": "^8.1.0",
     "react-dom": "^18.2.0",
     "react-drag-drop-files": "^2.3.7",
     "react-firebase-hooks": "^5.0.3",
