--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-toastify": "^9.0.7",
     "recharts": "^2.1.13",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.4.29",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
