--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@stripe/react-stripe-js": "^1.10.0",
     "@stripe/stripe-js": "^1.35.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^0.27.2",
@@ -45,6 +44,7 @@
     "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.4.29",
     "swiper": "^8.3.2",
+    "testing-library": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -72,6 +72,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^13.3.0",
     "msw": "^0.45.0",
     "tailwindcss": "^3.1.7"
   }
